--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 
 build:
   noarch: python
-  number: 0
+  number: 1
   script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
@@ -24,7 +24,6 @@ requirements:
     - ipywidgets >=7,<8
     - numpy
     - traittypes >=0.2
-    - ipyscales
 
 test:
   imports:
@@ -40,3 +39,5 @@ about:
 extra:
   recipe-maintainers:
     - vidartf
+    - jasongrout
+
