--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,14 +17,14 @@ build:
 
 requirements:
   host:
-    - python
+    - python >=3.6
     - pip
     - jupyter-packaging
     - jupyterlab >=3,<4
     - nodejs
   run:
-    - python
-    - ipywidgets >=7,<8
+    - python >=3.6
+    - ipywidgets >=7,<9
     - numpy
     - six
     - traittypes >=0.2
