--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,13 +17,13 @@ build:
 
 requirements:
   host:
-    - python
+    - python >=3.6
     - pip
     - jupyter-packaging
     - jupyterlab >=3,<4
     - nodejs
   run:
-    - python
+    - python >=3.6
     - ipywidgets >=7,<8
     - numpy
     - six
