--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,7 @@ requirements:
     - jupyter-packaging
     - jupyterlab >=3,<4
     - nodejs
+    - yarn
   run:
     - python >=3.7
     - ipywidgets >=7,<9
